--- a/ISOF placenameservice.ipynb
+++ b/ISOF placenameservice.ipynb
@@ -1196,6 +1196,270 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   description  0 non-null      float64\n",
+      " 1   fields       3 non-null      object \n",
+      " 2   id           3 non-null      int64  \n",
+      " 3   identifier   0 non-null      float64\n",
+      " 4   name         3 non-null      object \n",
+      " 5   old_name     3 non-null      object \n",
+      "dtypes: float64(2), int64(1), object(3)\n",
+      "memory usage: 272.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "url_service = \"v1/place-name-basis/types\"\n",
+    "\n",
+    "url = urlbase + url_service + \"?format=json\"\n",
+    "data_placenamebasis = pd.read_json(url)\n",
+    "data_placenamebasis.info() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>fields</th>\n",
+       "      <th>id</th>\n",
+       "      <th>identifier</th>\n",
+       "      <th>name</th>\n",
+       "      <th>old_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Belägg</td>\n",
+       "      <td>Äldre namnformer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Litteraturhänvisning</td>\n",
+       "      <td>Etymologi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Uppteckning</td>\n",
+       "      <td>Uppteckningar</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   description fields  id  identifier                  name          old_name\n",
+       "0          NaN     []   1         NaN                Belägg  Äldre namnformer\n",
+       "1          NaN     []   3         NaN  Litteraturhänvisning         Etymologi\n",
+       "2          NaN     []   5         NaN           Uppteckning     Uppteckningar"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_placenamebasis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://placenameservice.isof.se/PlaceNameService/v1/place-name-basis/2222?format=json\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 0 entries\n",
+      "Data columns (total 36 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   comment               0 non-null      float64\n",
+      " 1   country_area_name     0 non-null      float64\n",
+      " 2   county_id             0 non-null      int64  \n",
+      " 3   county_name           0 non-null      float64\n",
+      " 4   created_by            0 non-null      float64\n",
+      " 5   district_id           0 non-null      int64  \n",
+      " 6   district_name         0 non-null      float64\n",
+      " 7   evidence_information  0 non-null      float64\n",
+      " 8   evidence_year_oldest  0 non-null      float64\n",
+      " 9   evidence_years        0 non-null      float64\n",
+      " 10  fields                0 non-null      float64\n",
+      " 11  geometry_source       0 non-null      float64\n",
+      " 12  geometry_source_id    0 non-null      int64  \n",
+      " 13  has_back_side         0 non-null      bool   \n",
+      " 14  has_back_side_image   0 non-null      bool   \n",
+      " 15  has_front_side_image  0 non-null      bool   \n",
+      " 16  has_pdf               0 non-null      bool   \n",
+      " 17  id                    0 non-null      int64  \n",
+      " 18  identifier            0 non-null      float64\n",
+      " 19  language              0 non-null      float64\n",
+      " 20  latitude              0 non-null      float64\n",
+      " 21  longitude             0 non-null      float64\n",
+      " 22  map_identifier        0 non-null      float64\n",
+      " 23  map_number            0 non-null      float64\n",
+      " 24  parish_id             0 non-null      int64  \n",
+      " 25  parish_name           0 non-null      float64\n",
+      " 26  place_basis_type      0 non-null      float64\n",
+      " 27  place_name            0 non-null      float64\n",
+      " 28  place_name_basis      0 non-null      float64\n",
+      " 29  place_name_id         0 non-null      int64  \n",
+      " 30  province_id           0 non-null      int64  \n",
+      " 31  province_name         0 non-null      float64\n",
+      " 32  source                0 non-null      float64\n",
+      " 33  type                  0 non-null      float64\n",
+      " 34  updated_by            0 non-null      float64\n",
+      " 35  updated_date          0 non-null      float64\n",
+      "dtypes: bool(4), float64(25), int64(7)\n",
+      "memory usage: 124.0 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "url_service = \"v1/place-name-basis/2222\"\n",
+    "\n",
+    "url = urlbase + url_service + \"?format=json\"\n",
+    "data_placenamebasis_2222 = pd.read_json(url)\n",
+    "print(url)\n",
+    "data_placenamebasis_2222.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>comment</th>\n",
+       "      <th>country_area_name</th>\n",
+       "      <th>county_id</th>\n",
+       "      <th>county_name</th>\n",
+       "      <th>created_by</th>\n",
+       "      <th>district_id</th>\n",
+       "      <th>district_name</th>\n",
+       "      <th>evidence_information</th>\n",
+       "      <th>evidence_year_oldest</th>\n",
+       "      <th>evidence_years</th>\n",
+       "      <th>fields</th>\n",
+       "      <th>geometry_source</th>\n",
+       "      <th>geometry_source_id</th>\n",
+       "      <th>has_back_side</th>\n",
+       "      <th>has_back_side_image</th>\n",
+       "      <th>has_front_side_image</th>\n",
+       "      <th>has_pdf</th>\n",
+       "      <th>id</th>\n",
+       "      <th>identifier</th>\n",
+       "      <th>language</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>map_identifier</th>\n",
+       "      <th>map_number</th>\n",
+       "      <th>parish_id</th>\n",
+       "      <th>parish_name</th>\n",
+       "      <th>place_basis_type</th>\n",
+       "      <th>place_name</th>\n",
+       "      <th>place_name_basis</th>\n",
+       "      <th>place_name_id</th>\n",
+       "      <th>province_id</th>\n",
+       "      <th>province_name</th>\n",
+       "      <th>source</th>\n",
+       "      <th>type</th>\n",
+       "      <th>updated_by</th>\n",
+       "      <th>updated_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [comment, country_area_name, county_id, county_name, created_by, district_id, district_name, evidence_information, evidence_year_oldest, evidence_years, fields, geometry_source, geometry_source_id, has_back_side, has_back_side_image, has_front_side_image, has_pdf, id, identifier, language, latitude, longitude, map_identifier, map_number, parish_id, parish_name, place_basis_type, place_name, place_name_basis, place_name_id, province_id, province_name, source, type, updated_by, updated_date]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_placenamebasis_2222"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [],
