--- a/ISOF placenameservice.ipynb
+++ b/ISOF placenameservice.ipynb
@@ -1371,7 +1371,8 @@
     "url = urlbase + url_service + \"?format=json\"\n",
     "data_placenamebasis_2222 = pd.read_json(url)\n",
     "print(url)\n",
-    "data_placenamebasis_2222.info()\n"
+    "data_placenamebasis_2222.info()\n",
+    "https://placenameservice.isof.se/PlaceNameService/v1/place-names/country-area-filters"
    ]
   },
   {
@@ -1455,7 +1456,454 @@
     }
    ],
    "source": [
-    "data_placenamebasis_2222"
+    "data_placenamebasis_2222 \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://placenameservice.isof.se/PlaceNameService/v1/place-names/country-area-filters?format=json\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9 entries, 0 to 8\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   code_2              9 non-null      object \n",
+      " 1   code_3              9 non-null      object \n",
+      " 2   fields              9 non-null      object \n",
+      " 3   id                  9 non-null      int64  \n",
+      " 4   identifier          0 non-null      float64\n",
+      " 5   is_rest_of_world    9 non-null      bool   \n",
+      " 6   name                9 non-null      object \n",
+      " 7   part_of_country_id  2 non-null      float64\n",
+      "dtypes: bool(1), float64(2), int64(1), object(4)\n",
+      "memory usage: 641.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "url_service = \"v1/place-names/country-area-filters\"\n",
+    "url = urlbase + url_service + \"?format=json\"\n",
+    "print(url)\n",
+    "data_country_area_filters = pd.read_json(url)\n",
+    "data_country_area_filters.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code_2</th>\n",
+       "      <th>code_3</th>\n",
+       "      <th>fields</th>\n",
+       "      <th>id</th>\n",
+       "      <th>identifier</th>\n",
+       "      <th>is_rest_of_world</th>\n",
+       "      <th>name</th>\n",
+       "      <th>part_of_country_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DK</td>\n",
+       "      <td>DNK</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>208</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Danmark</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>EE</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>233</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Estland</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FI</td>\n",
+       "      <td>FIN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>246</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FO</td>\n",
+       "      <td>FRO</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>234</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Färöarna</td>\n",
+       "      <td>208.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>IS</td>\n",
+       "      <td>ISL</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>352</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Island</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NO</td>\n",
+       "      <td>NOR</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>578</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Norge</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SE</td>\n",
+       "      <td>SWE</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>752</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Sverige</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AX</td>\n",
+       "      <td>ALA</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>248</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Åland</td>\n",
+       "      <td>246.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>WD</td>\n",
+       "      <td>WLD</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>övriga världen</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  code_2 code_3 fields  ...  is_rest_of_world            name  part_of_country_id\n",
+       "0     DK    DNK     []  ...             False         Danmark                 NaN\n",
+       "1     EE    EST     []  ...             False         Estland                 NaN\n",
+       "2     FI    FIN     []  ...             False         Finland                 NaN\n",
+       "3     FO    FRO     []  ...             False        Färöarna               208.0\n",
+       "4     IS    ISL     []  ...             False          Island                 NaN\n",
+       "5     NO    NOR     []  ...             False           Norge                 NaN\n",
+       "6     SE    SWE     []  ...             False         Sverige                 NaN\n",
+       "7     AX    ALA     []  ...             False           Åland               246.0\n",
+       "8     WD    WLD     []  ...              True  övriga världen                 NaN\n",
+       "\n",
+       "[9 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_country_area_filters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://placenameservice.isof.se/PlaceNameService/v1/place-names/language-filters?format=json\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   code_2      3 non-null      object \n",
+      " 1   fields      3 non-null      object \n",
+      " 2   identifier  0 non-null      float64\n",
+      " 3   name        3 non-null      object \n",
+      "dtypes: float64(1), object(3)\n",
+      "memory usage: 224.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "url_service = \"v1/place-names/language-filters\"\n",
+    "url = urlbase + url_service + \"?format=json\"\n",
+    "data_language_filters = pd.read_json(url)\n",
+    "print(url)\n",
+    "data_language_filters.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code_2</th>\n",
+       "      <th>fields</th>\n",
+       "      <th>identifier</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fi</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>finska</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sm</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>samiska</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sv</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>svenska</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  code_2 fields  identifier     name\n",
+       "0     fi     []         NaN   finska\n",
+       "1     sm     []         NaN  samiska\n",
+       "2     sv     []         NaN  svenska"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_language_filters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://placenameservice.isof.se/PlaceNameService/v1/place-names/name-types?format=json\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4 entries, 0 to 3\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   description  0 non-null      float64\n",
+      " 1   fields       4 non-null      object \n",
+      " 2   id           4 non-null      int64  \n",
+      " 3   identifier   0 non-null      float64\n",
+      " 4   name         4 non-null      object \n",
+      " 5   place_types  4 non-null      object \n",
+      "dtypes: float64(2), int64(1), object(3)\n",
+      "memory usage: 320.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "url_service = \"v1/place-names/name-types\"\n",
+    "url = urlbase + url_service + \"?format=json\"\n",
+    "data_name_types = pd.read_json(url)\n",
+    "print(url)\n",
+    "data_name_types.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>fields</th>\n",
+       "      <th>id</th>\n",
+       "      <th>identifier</th>\n",
+       "      <th>name</th>\n",
+       "      <th>place_types</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bebyggelsenamn</td>\n",
+       "      <td>[{'description': None, 'fields': [], 'id': 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Naturnamn</td>\n",
+       "      <td>[{'description': None, 'fields': [], 'id': 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ortnamnselement</td>\n",
+       "      <td>[{'description': None, 'fields': [], 'id': 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Personbenämningar</td>\n",
+       "      <td>[{'description': None, 'fields': [], 'id': 0, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   description  ...                                        place_types\n",
+       "0          NaN  ...  [{'description': None, 'fields': [], 'id': 0, ...\n",
+       "1          NaN  ...  [{'description': None, 'fields': [], 'id': 0, ...\n",
+       "2          NaN  ...  [{'description': None, 'fields': [], 'id': 0, ...\n",
+       "3          NaN  ...  [{'description': None, 'fields': [], 'id': 0, ...\n",
+       "\n",
+       "[4 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_name_types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gamla --> Nya \n",
+    "I gamla hade Wikipedia socken länkar dvs. [Kungsäters_socken](https://sv.wikipedia.org/wiki/Kungs%C3%A4ters_socken) länkar till [SOFI old _s1px001/213115a1](http://www4.sprakochfolkminnen.se/NAU/bilder/_s1px001/213115a1.htm)\n",
+    "\n",
+    "Dom har grupperat ihop saker (inte alls färdigt) --> att Sala silvergruva WD [Q3314828](https://www.wikidata.org/wiki/Q3314828) tror jag motsvarar [place-names/1771147](https://placename.isof.se/PlaceNamePublic/place-names/1771147) och där om jag fattar rätt har man sorterat det i tidsordning etc.  \n",
+    "\n",
+    "\n",
+    "* https://placename.isof.se/PlaceNamePublic/place-names/1771147"
    ]
   },
   {
@@ -1477,6 +1925,13 @@
     "#print (url, r.status)\n",
     "#data = json.loads(r.data.decode('utf-8')) \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
