--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-09-17 15:44:51.708251\n"
+      "Last run:  2020-11-25 12:42:42.327467\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1499  antal poster\n"
+      "1674  antal poster\n"
      ]
     }
    ],
@@ -149,19 +149,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1499 entries, 0 to 1498\n",
+      "RangeIndex: 1674 entries, 0 to 1673\n",
       "Data columns (total 7 columns):\n",
       " #   Column                    Non-Null Count  Dtype \n",
       "---  ------                    --------------  ----- \n",
-      " 0   skblid                    1499 non-null   object\n",
-      " 1   publishedDate             1499 non-null   object\n",
-      " 2   article_author_firstname  1499 non-null   object\n",
-      " 3   article_author_lastname   1499 non-null   object\n",
-      " 4   subtitle_sv               1499 non-null   object\n",
-      " 5   name_lastname             1499 non-null   object\n",
-      " 6   name_firstname            1499 non-null   object\n",
+      " 0   skblid                    1674 non-null   object\n",
+      " 1   publishedDate             1674 non-null   object\n",
+      " 2   article_author_firstname  1674 non-null   object\n",
+      " 3   article_author_lastname   1674 non-null   object\n",
+      " 4   subtitle_sv               1674 non-null   object\n",
+      " 5   name_lastname             1674 non-null   object\n",
+      " 6   name_firstname            1674 non-null   object\n",
       "dtypes: object(7)\n",
-      "memory usage: 82.1+ KB\n"
+      "memory usage: 91.7+ KB\n"
      ]
     }
    ],
@@ -205,13 +205,13 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1499 entries, 0 to 1498\n",
+      "RangeIndex: 1673 entries, 0 to 1672\n",
       "Data columns (total 1 columns):\n",
       " #   Column  Non-Null Count  Dtype \n",
       "---  ------  --------------  ----- \n",
-      " 0   skblid  1499 non-null   object\n",
+      " 0   skblid  1673 non-null   object\n",
       "dtypes: object(1)\n",
-      "memory usage: 11.8+ KB\n"
+      "memory usage: 13.2+ KB\n"
      ]
     }
    ],
@@ -266,13 +266,13 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1499 entries, 0 to 1498\n",
+      "RangeIndex: 1673 entries, 0 to 1672\n",
       "Data columns (total 1 columns):\n",
       " #   Column  Non-Null Count  Dtype \n",
       "---  ------  --------------  ----- \n",
-      " 0   skblid  1499 non-null   object\n",
+      " 0   skblid  1673 non-null   object\n",
       "dtypes: object(1)\n",
-      "memory usage: 11.8+ KB\n"
+      "memory usage: 13.2+ KB\n"
      ]
     }
    ],
@@ -313,8 +313,8 @@
     {
      "data": {
       "text/plain": [
-       "both          1499\n",
-       "right_only       0\n",
+       "both          1673\n",
+       "right_only       1\n",
        "left_only        0\n",
        "Name: _merge, dtype: int64"
       ]
@@ -384,14 +384,30 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1673</th>\n",
+       "      <td>SigneHelenaWennberg</td>\n",
+       "      <td>2020-11-25</td>\n",
+       "      <td>Karin</td>\n",
+       "      <td>Gustavsson</td>\n",
+       "      <td>Lärare, rektor, rösträttskvinna</td>\n",
+       "      <td>Wennberg</td>\n",
+       "      <td>/Signe/ Helena</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [skblid, publishedDate, article_author_firstname, article_author_lastname, subtitle_sv, name_lastname, name_firstname, _merge]\n",
-       "Index: []"
+       "                   skblid publishedDate article_author_firstname  \\\n",
+       "1673  SigneHelenaWennberg    2020-11-25                    Karin   \n",
+       "\n",
+       "     article_author_lastname                      subtitle_sv name_lastname  \\\n",
+       "1673              Gustavsson  Lärare, rektor, rösträttskvinna      Wennberg   \n",
+       "\n",
+       "      name_firstname      _merge  \n",
+       "1673  /Signe/ Helena  right_only  "
       ]
      },
      "execution_count": 16,
@@ -413,20 +429,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 0 entries\n",
+      "Int64Index: 1 entries, 1673 to 1673\n",
       "Data columns (total 8 columns):\n",
       " #   Column                    Non-Null Count  Dtype   \n",
       "---  ------                    --------------  -----   \n",
-      " 0   skblid                    0 non-null      object  \n",
-      " 1   publishedDate             0 non-null      object  \n",
-      " 2   article_author_firstname  0 non-null      object  \n",
-      " 3   article_author_lastname   0 non-null      object  \n",
-      " 4   subtitle_sv               0 non-null      object  \n",
-      " 5   name_lastname             0 non-null      object  \n",
-      " 6   name_firstname            0 non-null      object  \n",
-      " 7   _merge                    0 non-null      category\n",
+      " 0   skblid                    1 non-null      object  \n",
+      " 1   publishedDate             1 non-null      object  \n",
+      " 2   article_author_firstname  1 non-null      object  \n",
+      " 3   article_author_lastname   1 non-null      object  \n",
+      " 4   subtitle_sv               1 non-null      object  \n",
+      " 5   name_lastname             1 non-null      object  \n",
+      " 6   name_firstname            1 non-null      object  \n",
+      " 7   _merge                    1 non-null      category\n",
       "dtypes: category(1), object(7)\n",
-      "memory usage: 104.0+ bytes\n"
+      "memory usage: 169.0+ bytes\n"
      ]
     }
    ],
@@ -443,8 +459,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0  antal poster\n",
-      "Ingen fil skapas inga nya poster\n"
+      "1  antal poster\n"
      ]
     }
    ],
@@ -519,7 +534,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-09-17 15:45:00.594331\n"
+      "Ended:  2020-11-25 12:42:52.247521\n"
      ]
     }
    ],
