--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -92,7 +92,13 @@
     "  1. jämför Wikidata fält och Wikidata version av \"samma\" objekt \n",
     "    1. hoppar till fält koordinat = P625 https://www.wikidata.org/wiki/Q96105887?uselang=sv#P625 som har 2 värden där det ena markets \"fel\"\n",
     "    2. ser ändringar mellan [version 1201371200 och 1201373921](https://www.wikidata.org/w/index.php?title=Q96105887&type=revision&diff=1201373921&oldid=1201371200) \n",
-    "1. \"Senast uppdaterad 20 maj 2020\" anges på [storsthlm.dataplatform.se cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd) men vad har ändrats?!?!? se ovan om versionshistorik "
+    "1. \"Senast uppdaterad 20 maj 2020\" anges på [storsthlm.dataplatform.se cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd) men vad har ändrats?!?!? se ovan om versionshistorik   \n",
+    "\n",
+    "## Länkar\n",
+    "* tankar hur [ett externt data set skall fungera](https://www.wikidata.org/wiki/Wikidata:Property_proposal/ISOF_place#One_way_to_design_a_system_to_be_a_good_external_identifier_for_Wikidata)\n",
+    "* tankar om [co-creation hos jobtech](https://forum.jobtechdev.se/t/har-ni-input-till-varens-meetups/263/3)\n",
+    "\n",
+    "![title](image/cocreation_small.png)\n"
    ]
   },
   {
