--- a/Arken.ipynb
+++ b/Arken.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-12-01 10:59:50.593972\n"
+      "Last run:  2020-12-01 15:33:51.464472\n"
      ]
     }
    ],
@@ -54,12 +54,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e505598adcd94741b9b3482a67ace557",
+       "model_id": "c014d77c298c4af08f959e42308cad32",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=115.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=1691.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -125,14 +125,14 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 115 entries, 0 to 114\n",
+      "RangeIndex: 1691 entries, 0 to 1690\n",
       "Data columns (total 2 columns):\n",
       " #   Column  Non-Null Count  Dtype \n",
       "---  ------  --------------  ----- \n",
-      " 0   WD      115 non-null    object\n",
-      " 1   arkid   115 non-null    object\n",
+      " 0   WD      1691 non-null   object\n",
+      " 1   arkid   1691 non-null   object\n",
       "dtypes: object(2)\n",
-      "memory usage: 1.9+ KB\n"
+      "memory usage: 26.5+ KB\n"
      ]
     }
    ],
@@ -173,28 +173,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Q2377709</td>\n",
-       "      <td>Lamm,-Martin</td>\n",
+       "      <td>Q1777178</td>\n",
+       "      <td>Ahnlund,-Nils</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Q57074</td>\n",
-       "      <td>Sachs,-Nelly</td>\n",
+       "      <td>Q4934967</td>\n",
+       "      <td>Alfons,-Harriet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Q457009</td>\n",
-       "      <td>Thorvall,-Kerstin</td>\n",
+       "      <td>Q54945</td>\n",
+       "      <td>alfven-hannes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Q5708134</td>\n",
-       "      <td>Eldh,-Carl</td>\n",
+       "      <td>Q522079</td>\n",
+       "      <td>Alfvén,-Inger</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Q5542816</td>\n",
-       "      <td>Adler-Karlsson,-Gunnar</td>\n",
+       "      <td>Q22250694</td>\n",
+       "      <td>Alin,-Hans</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -202,50 +202,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>110</th>\n",
-       "      <td>Q5577303</td>\n",
-       "      <td>Bjurström,-Carl-Gustaf</td>\n",
+       "      <th>195</th>\n",
+       "      <td>Q1554722</td>\n",
+       "      <td>Brusewitz,-Gunnar</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>Q442535</td>\n",
-       "      <td>Dagerman,-Stig</td>\n",
+       "      <th>196</th>\n",
+       "      <td>Q4941084</td>\n",
+       "      <td>Bråkenhielm,-Malvina</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>Q5628614</td>\n",
-       "      <td>Eichhorn,-Christoffer</td>\n",
+       "      <th>197</th>\n",
+       "      <td>Q84423</td>\n",
+       "      <td>Buber,-Martin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>Q1038496</td>\n",
-       "      <td>Tessin,-Carl-Gustaf</td>\n",
+       "      <th>198</th>\n",
+       "      <td>Q571710</td>\n",
+       "      <td>Bull,-Francis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>Q102952052</td>\n",
-       "      <td>Lamm,-Greta</td>\n",
+       "      <th>199</th>\n",
+       "      <td>Q318385</td>\n",
+       "      <td>Bull,-Olle,-1810-1880</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>115 rows × 2 columns</p>\n",
+       "<p>200 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             WD                   arkid\n",
-       "0      Q2377709            Lamm,-Martin\n",
-       "1        Q57074            Sachs,-Nelly\n",
-       "2       Q457009       Thorvall,-Kerstin\n",
-       "3      Q5708134              Eldh,-Carl\n",
-       "4      Q5542816  Adler-Karlsson,-Gunnar\n",
-       "..          ...                     ...\n",
-       "110    Q5577303  Bjurström,-Carl-Gustaf\n",
-       "111     Q442535          Dagerman,-Stig\n",
-       "112    Q5628614   Eichhorn,-Christoffer\n",
-       "113    Q1038496     Tessin,-Carl-Gustaf\n",
-       "114  Q102952052             Lamm,-Greta\n",
+       "            WD                  arkid\n",
+       "0     Q1777178          Ahnlund,-Nils\n",
+       "1     Q4934967        Alfons,-Harriet\n",
+       "2       Q54945          alfven-hannes\n",
+       "3      Q522079          Alfvén,-Inger\n",
+       "4    Q22250694             Alin,-Hans\n",
+       "..         ...                    ...\n",
+       "195   Q1554722      Brusewitz,-Gunnar\n",
+       "196   Q4941084   Bråkenhielm,-Malvina\n",
+       "197     Q84423          Buber,-Martin\n",
+       "198    Q571710          Bull,-Francis\n",
+       "199    Q318385  Bull,-Olle,-1810-1880\n",
        "\n",
-       "[115 rows x 2 columns]"
+       "[200 rows x 2 columns]"
       ]
      },
      "execution_count": 4,
